# madbot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mcp_servers.json.example  pyproject.toml
bot/: config.py  db.py  main.py  scheduler.py  utils.py
bot/ai/: chat.py  mcp_client.py  providers.py
bot/handlers/: admin.py  amazon.py  briefing.py  calendar.py  echo.py  facts.py  fallback.py  fetch.py  help.py  introspect.py  news.py  schedule.py  search.py  start.py  time.py  weather.py
